apply plugin: 'com.android.library'

android {
  compileSdkVersion 21
  buildToolsVersion "21.1.2"

  compileOptions {
    sourceCompatibility JavaVersion.VERSION_1_7
    targetCompatibility JavaVersion.VERSION_1_7
  }

  defaultConfig {
    minSdkVersion 10
    targetSdkVersion 21
    versionName project.VERSION_NAME
    versionCode Integer.parseInt(project.VERSION_CODE)
    consumerProguardFiles 'consumer-proguard-rules.pro'
  }
}

apply plugin: 'android-unit-test'

androidUnitTest {
  testTasks {
    all {
      jvmArgs '-noverify'
      jvmArgs '-XX:MaxPermSize=256m'
    }
  }
}

dependencies {
  compile 'com.google.guava:guava:16.0'

  testCompile('junit:junit:4.11') {
    exclude module: 'hamcrest-core'
  }
  testCompile 'org.robolectric:robolectric:2.4'
  testCompile 'org.easytesting:fest-assert-core:2.0M10'
  testCompile 'org.mockito:mockito-all:1.9.5'
  testCompile 'com.google.android:android:4.1.1.4'

  compile 'com.android.support:support-annotations:19.1.0'
}

apply from: './gradle-mvn-push.gradle'
